versions/v1.4/modules/en/pages/storage/volumes/create-volume.adoc
= Create a Volume
:revdate: 2025-06-18
:page-revdate: {revdate}

== Create an Empty Volume

[tabs]
======
UI::
+
--
*Header Section*

. Set the Volume `Name`.
. (Optional) Provide a `Description` for the Volume. 

*Basics Tab*

. Choose `New` in `Source`. 
. Select an existing `StorageClass`. 
. Configure the `Size` of the volume.
+
image::volume/create-empty-volume.png[create empty volume]

*Oversized volumes*

In {harvester-product-name} v1.4.3, which uses {longhorn-product-name} v1.7.3, oversized volumes (for example, 999999 Gi in size) are marked **Not Ready** and cannot be deleted.

To resolve this issue, perform the following steps:

. Temporarily remove the PVC webhook rule.
+
[,bash]
----
RULE_INDEX=$(kubectl get \
  validatingwebhookconfiguration longhorn-webhook-validator -o json \
  | jq '.webhooks[0].rules | map(.resources[0] == "persistentvolumeclaims") | index(true)')

if [ -n "$RULE_INDEX" -a "$RULE_INDEX" != "null" ]; then
  kubectl patch validatingwebhookconfiguration longhorn-webhook-validator \
    --type='json' \
    -p="[{'op': 'remove', 'path': '/webhooks/0/rules/$RULE_INDEX'}]"
fi
----

. Wait for the related PVC to be deleted.

. Restore the PVC webhook rule to re-enable validation.
+
[,bash]
----
kubectl patch validatingwebhookconfiguration longhorn-webhook-validator \
  --type='json' \
  -p='[{"op": "add", "path": "/webhooks/0/rules/-", "value": {"apiGroups":[""],"apiVersions":["v1"],"operations":["UPDATE"],"resources":["persistentvolumeclaims"],"scope":"Namespaced"}}]'
----

The issue will be addressed in {longhorn-product-name} v1.8.2, which will likely be included in {harvester-product-name} v1.5.1.

Related issues: https://github.com/harvester/harvester/issues/8096[#8096] and https://github.com/longhorn/longhorn/issues/10741[#10741]
--

API::
+
[,yaml]
----
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    volume.beta.kubernetes.io/storage-provisioner: driver.longhorn.io
    volume.kubernetes.io/storage-provisioner: driver.longhorn.io
  name: my-vol
  namespace: default
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 10Gi
  volumeMode: Block
  volumeName: pvc-my-vol
----

Terraform::
+
To create an empty volume on {harvester-product-name} with Terraform using the https://registry.terraform.io/providers/harvester/harvester/latest[Harvester Terraform Provider], define a `harvester_volume` resource block: 
+
[,json]
----
resource "harvester_volume" "empty-volume" {
  name      = "empty-volume"
  namespace = "default"

  size = "10Gi"
}
----
======

== Create an Image Volume

[tabs]
======
UI::
+
--
*Header Section*

. Set the Volume `Name`. 
. (Optional) Provide a `Description` for the Volume. 

**Basics Tab** 

. Choose `VM Image` in `Source`. 
. Select an existing `Image`.
. Configure the `Size` of the volume. 
+
[CAUTION]
====
When creating volumes from a VM image, ensure that the volume size is greater than or equal to the image size. The volume may become corrupted if the configured volume size is less than the size of the underlying image. This is particularly important for qcow2 images because the virtual size is typically greater than the physical size. By default, {harvester-product-name} will set the volume size to the virtual size of the image.
====
+
image::volume/create-image-volume.png[create image volume]
--

API::
+
Create a volume, initialized with the contents of the image `image-8rb2z` from the namespace `default`: 
+
[,yaml]
----
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    harvesterhci.io/imageId: default/image-8rb2z
    volume.beta.kubernetes.io/storage-provisioner: driver.longhorn.io
    volume.kubernetes.io/storage-provisioner: driver.longhorn.io
  name: foobar
  namespace: default
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 5Gi
  storageClassName: longhorn-image-8rb2z
  volumeMode: Block
  volumeName: pvc-foobar
----

Terraform::
+
To create a volume on {harvester-product-name} using Terraform and initialize it with the contents of an image, define a `harvester_volume` resource block and set the `image` property:
+
[,json]
----
resource "harvester_volume" "opensuse154-image-disk" {
  name      = "opensuse154-image-disk"
  namespace = "default"

  size  = "10Gi"
  image = harvester_image.opensuse154.id
}
----
======
